; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf64-ppc.c_ppc64_elf_link_hash_table_free.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/bfd/extr_elf64-ppc.c_ppc64_elf_link_hash_table_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfd_link_hash_table = type { i32 }
%struct.ppc_link_hash_table = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bfd_link_hash_table*)* @ppc64_elf_link_hash_table_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ppc64_elf_link_hash_table_free(%struct.bfd_link_hash_table* %0) #0 {
  %2 = alloca %struct.bfd_link_hash_table*, align 8
  %3 = alloca %struct.ppc_link_hash_table*, align 8
  store %struct.bfd_link_hash_table* %0, %struct.bfd_link_hash_table** %2, align 8
  %4 = load %struct.bfd_link_hash_table*, %struct.bfd_link_hash_table** %2, align 8
  %5 = bitcast %struct.bfd_link_hash_table* %4 to %struct.ppc_link_hash_table*
  store %struct.ppc_link_hash_table* %5, %struct.ppc_link_hash_table** %3, align 8
  %6 = load %struct.ppc_link_hash_table*, %struct.ppc_link_hash_table** %3, align 8
  %7 = getelementptr inbounds %struct.ppc_link_hash_table, %struct.ppc_link_hash_table* %6, i32 0, i32 1
  %8 = call i32 @bfd_hash_table_free(i32* %7)
  %9 = load %struct.ppc_link_hash_table*, %struct.ppc_link_hash_table** %3, align 8
  %10 = getelementptr inbounds %struct.ppc_link_hash_table, %struct.ppc_link_hash_table* %9, i32 0, i32 0
  %11 = call i32 @bfd_hash_table_free(i32* %10)
  %12 = load %struct.bfd_link_hash_table*, %struct.bfd_link_hash_table** %2, align 8
  %13 = call i32 @_bfd_generic_link_hash_table_free(%struct.bfd_link_hash_table* %12)
  ret void
}

declare dso_local i32 @bfd_hash_table_free(i32*) #1

declare dso_local i32 @_bfd_generic_link_hash_table_free(%struct.bfd_link_hash_table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
